pytest-responsemock changelog
=============================


v0.1.1 [2020-03-10]
-------------------
* Plugin made friendly to shared virtual envs.


v0.1.0 [2020-03-05]
-------------------
+ Basic functionality.