@@ -2,6 +2,11 @@ pytest-responsemock changelog
 =============================
 
 
+Unreleased
+----------
++ Added support for response header fileds.
+
+
 v0.1.1 [2020-03-10]
 -------------------
 * Plugin made friendly to shared virtual envs.
